# SimpleSynth

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
ext/: CMakeLists.txt
ext/glfw/: CMakeLists.txt
src/: CMakeLists.txt  simpleSynth.cpp  simpleSynth.h
src/editor/: CMakeLists.txt  serializedData.h  timelineEditor.cpp  timelineEditor.h
src/graphics/: CMakeLists.txt  waveVisualizer.cpp  waveVisualizer.h  window.cpp  window.h
src/synth/: CMakeLists.txt  ampSource.cpp  ampSource.h  compressorSource.cpp  compressorSource.h  sample.cpp  sample.h  sawSource.cpp  sawSource.h  sawSynth.cpp  sawSynth.h  simpleSynth.cpp  simpleSynth.h  sinSource.cpp  sinSource.h  sinSynth.cpp  sinSynth.h  soundDevice.cpp  soundDevice.h  soundSource.cpp  soundSource.h  squareSource.cpp  squareSource.h  squareSynth.cpp  squareSynth.h  synth.cpp  synth.h  synthSource.cpp  synthSource.h  timelineSource.cpp  timelineSource.h
src/windows/: timelineEditor.cpp  timelineEditor.h
